Fix gallery layout on mobile

--- a/src/components/Gallery/Gallery.module.scss
+++ b/src/components/Gallery/Gallery.module.scss
@@ -1,20 +1,24 @@
 @use '../../styles/globals.module' as *;
 
-.masonryGrid {
-  display: flex;
+.galleryGrid {
   max-width: 1200px;
-  width: auto;
+  width: 100%;
   margin: 32px auto 64px;
-  padding: 32px;
-  padding-left: 16px;
+  padding: 0 32px;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
+  gap: 16px;
 
   img {
-    display: block;
     width: 100%;
+    height: 100%;
+    object-fit: cover;
+    aspect-ratio: 1 / 1;
   }
-}
 
-.masonryGridColumn {
-  padding-left: 10px; /* Spazio tra le colonne */
-  background-clip: padding-box;
+  @media screen and (max-width: 768px) {
+    img {
+      aspect-ratio: unset;
+    }
+  }
 }
